tests/expectations/compiler/mappings/locator_expression_fail.out
Error [ETYC0372117]: Expected type `u32` but type `(address => bool)` was found.
    --> compiler-test:5:22
     |
   5 |         let a: u32 = relay.aleo::users;
     |                      ^^^^^^^^^^^^^^^^^
